--- a/themes/pagedjs/layouts/_default/single.html
+++ b/themes/pagedjs/layouts/_default/single.html
@@ -7,7 +7,7 @@
       <h1 id="title">{{ .Title }}</h1>
       <p class="meta">
         written by <span class="author">{{ .Params.author }}</span> on 
-        <span class="date">{{ dateFormat "January 2, 2006" .Date  }}</span>
+        <span class="date">{{ dateFormat "2 of January 2006" .Date  }}</span>
       </p>
       {{ end }}
      
