update before launch

--- a/themes/pagedjs/assets/css/base/variables.css
+++ b/themes/pagedjs/assets/css/base/variables.css
@@ -21,7 +21,7 @@
   --color-paper: var(--color-background);
   --color-accent: var(--color-primary);
   --color-primary: var(--color-body);
-  --color-grey: currentcolor;
+  --color-grey: #ddd;
   /* --font-serif: "Minipax Variable", serif; */
   /* --font-serif: "Fanwood Text", serif; */
   --font-serif: "Linden Hill", serif;
