--- a/themes/pagedjs/assets/css/page/doc.css
+++ b/themes/pagedjs/assets/css/page/doc.css
@@ -8,7 +8,11 @@
 
 
   .list .content .article  {
-    
+    ul ul{
+      font-size: 1em;
+      /* font-size: 0.9em; */
+      color: red;
+    }
   }
 }
 
