--- a/themes/pagedjs/assets/css/base/toc.css
+++ b/themes/pagedjs/assets/css/base/toc.css
@@ -6,25 +6,29 @@
 
 #TableOfContents {
 
-    font-size: 0.9em;
 
   a {
     text-decoration: none;
     background: var(--color-paper);
-    font-family: var(--font-sans);
     font-weight: 400;
     font-style: normal;
+    font-size: 0.85em;
   }
   ul {
-    border-left: 1px solid var(--color-body);
+    font-family: var(--font-sans);
+
+    /* border-left: 1px solid var(--color-body);
     margin-left: 3px;
-    margin-top: 0;
+    margin-top: 0; */
+    padding-top: .5em;
+    border-left: 2px solid var(--color-grey);
+
   }
   li {
-    list-style-type: none;
+    /* list-style-type: none;
     max-width: 100%;
     position: relative;
-    margin-left: 2ch;
+    margin-left: 2ch; */
 
     a {
       background: var(--color-paper);
