--- a/themes/pagedjs/assets/css/page/list.css
+++ b/themes/pagedjs/assets/css/page/list.css
@@ -16,6 +16,7 @@
     padding-left: 2ch;
     border-left: 1px solid var(--color-lightest-grey);
     margin-left: 2ch;
+    font-size: 1em;
   }
 
   nav:not(".menu") > ul {
@@ -28,8 +29,10 @@
 
     > ul {
       margin-bottom: 0.5em;
-      padding-left: 2ch;
       margin-left: 1ch;
+      padding-left: 1ch;
+      font-size: 1em;
+
       border-left: 1px solid var(--color-lightest-grey);
     }
 
@@ -67,11 +70,14 @@
       margin-top: 0.3em;
       color: var(--color-primary);
       padding-left: 1em;
-      border-left: 2px solid currentcolor;
+      /* border-left: 2px solid currentcolor; */
+    border-left: 2px solid var(--color-grey);
+
       max-width: 51ch;
       display: block;
       font-family: var(--font-serif);
-      margin-left: 4ch;
+      margin-left: 3ch;
+      
       /* align-self: flex-end; */
     }
     h2 {
