--- a/themes/pagedjs/layouts/_default/index.html
+++ b/themes/pagedjs/layouts/_default/index.html
@@ -1,3 +1,8 @@
+{{ define "head-html"  }}
+    <!-- --> 
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+{{ end }}
+
 {{ define "header"  }}
     <!-- --> 
 {{ end }}
