--- a/themes/pagedjs/layouts/_default/baseof.html
+++ b/themes/pagedjs/layouts/_default/baseof.html
@@ -18,7 +18,7 @@
         auto: false
       };    
     </script>
-    {{ block 'html-head' .}}
+    {{ block "htmlhead" .}}
     {{ end }}
   </head>
 
