--- a/themes/pagedjs/layouts/_default/index.html
+++ b/themes/pagedjs/layouts/_default/index.html
@@ -1,4 +1,4 @@
-{{ define "head-html"  }}
+{{ define "htmlhead"  }}
     <!-- --> 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 {{ end }}
