--- a/themes/pagedjs/layouts/_default/baseof.html
+++ b/themes/pagedjs/layouts/_default/baseof.html
@@ -87,6 +87,28 @@
     <script src="{{$docjs.Permalink}}"></script>
     {{ end }}
     {{ end }}
+
+
+    {{/*  {{ partial "matomo-tracking" . }}  */}}
+
+    <!-- Matomo -->
+
+<script type="text/javascript">
+  var _paq = window._paq || [];
+  / tracker methods like "setCustomDimension" should be called before "trackPageView" /
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//stats.coko.foundation/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '17']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+
+<noscript><p><img src="//stats.coko.foundation/matomo.php?idsite=17&rec=1" style="border:0;" alt="" /></p></noscript>
+<!-- End Matomo Code -->
   </body>
 
 </html>
