--- a/themes/pagedjs/assets/css/base/layout.css
+++ b/themes/pagedjs/assets/css/base/layout.css
@@ -4,6 +4,7 @@ html {
   background-attachment: fixed; */
   scroll-behavior: smooth;
   background: var(--color-background);
+
   * {
     box-sizing: border-box;
   }
@@ -14,7 +15,7 @@ body {
   box-sizing: border-box;
   display: grid;
   grid-template-columns: [left] 20% [main] 60% [right] 20% [end];
-  width: 80%; 
+  width: 80%;
   grid-gap: 0vw;
   padding: 0em;
   background: var(--color-background);
@@ -39,8 +40,6 @@ article {
   right: 0;
   bottom: 0;
   z-index: -1;
-  
- 
 }
 
 
@@ -68,6 +67,7 @@ article {
   bottom: 20px;
   border-width: 1px 0;
 }
+
 .paper {
   background: var(--color-paper);
   top: 2px;
@@ -76,7 +76,6 @@ article {
   left: 2px;
   position: absolute;
   z-index: 0;
-
 }
 
 
@@ -114,20 +113,18 @@ article {
       letter-spacing: 0.2ch;
       margin-bottom: 1em;
     }
-   
-    
   }
 
   .next::before {
     content: "Next";
     text-align: right;
-  
-  
   }
+
   .next {
     border-right: 2px solid black;
     padding-right: 2ch;
   }
+
   .previous {
     border-left: 2px solid black;
     padding-left: 2ch;
@@ -144,9 +141,31 @@ article {
 .MatomoOptout {
   grid-column: main/end;
   text-align: center;
+
   button {
     border: 2px solid var(--color-grey);
     padding: 1em 1em;
     margin: 2em;
+  }
+}
+
+
+.not-found {
+  --color-paper: white;
+  .background {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    opacity: 0.5;
+    z-index: -1;
+    
+  }
+  
+  h1, p, #title {
+    max-width: max-content;
+    padding: 0.4em;
+    background: white;
   }
 }
