fixed menu for mobile

--- a/themes/pagedjs/assets/css/base/mobile.css
+++ b/themes/pagedjs/assets/css/base/mobile.css
@@ -124,6 +124,7 @@
     width: 100%;
     /* border-bottom: none; */
     background: white;
+    position: fixed;
 
     .back-home {
       position: unset;
