fix footer and print button on list

--- a/themes/pagedjs/assets/css/base/print.css
+++ b/themes/pagedjs/assets/css/base/print.css
@@ -162,7 +162,7 @@
 
   footer {
     position: running(footer);
-    font-size: 0.8em;
+    font-size: .65em;
     margin: 0;
     }
     .paginator {
