--- a/themes/pagedjs/layouts/documentation/list.html
+++ b/themes/pagedjs/layouts/documentation/list.html
@@ -4,16 +4,21 @@
         {{ range .Pages.ByDate }}
         <li class="article">
             <h2><a href="{{ .Permalink }}"><span>{{ .Title }}</span></a></h2>
-            {{ .TableOfContents }}
+            {{ $link := printf "href=\"%s" .Permalink }}
+            {{replace .Page.TableOfContents `nav id="TableOfContents"` `div class="toc"` | replaceRE `href="` $link | safeHTML }}  
+            
         </li>
         {{ end }}
         <li class="article">
-            <h2><a href="/tags/guide"><span>Guides and How-tos from the journal</span></a></h2>
+            <h2>
+                <a href="/tags/guide"><span>Guides and How-tos from the journal</span></a>
+            </h2>
             <nav id="TableOfContents">
                 <ul>
                     {{ range .Site.RegularPages.ByDate.Reverse }}
                     {{ if in .Params.tags "guide" }}
-                    <li><a href={{ .Page.Permalink }}>
+                    {{ $link := .Page.URL}}
+                    <li><a href={{ .Page.URL }}>
                             {{ .Page.Title }}
                         </a></li>
                     {{ end }}
