--- a/themes/pagedjs/assets/css/base/mobile.css
+++ b/themes/pagedjs/assets/css/base/mobile.css
@@ -200,7 +200,9 @@
     align-items: center;
     font-size: 1.5em;
     line-height: 1.2;
-
+    .next, .previous {
+      max-width: unset;
+    }
     .next {
       width: 100%;
       text-align: center;
