--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -235,6 +235,7 @@ article {
   /* table */
 
   .table {
+   
     flex-direction: column;
     width: 80%;
     margin: 2em auto;
@@ -251,9 +252,18 @@ article {
         display: none;
       }
     }
+
   }
 
   table {
+    &.specs {
+      a {
+        font-style: normal;
+      }
+    }
+    [colspan="4"] {
+     padding-top: 3em; 
+    }
     /* border: 1px solid var(--color-grey); */
     border-collapse: collapse;
     font-family: var(--font-sans);
