--- a/themes/bookish/layouts/partials/pagedjs-header.html
+++ b/themes/bookish/layouts/partials/pagedjs-header.html
@@ -1,10 +1,10 @@
-{{ $pagedjsStyle := resources.Get "css/pagedjs/pagedjs.css" | resources.PostCSS (dict "config" "./assets/css/postcss.config.js" "noMap" true) | minify  | resources.Fingerprint "md5"}}
+{{ $pagedjsStyle := resources.Get "css/pagedjs/pagedjs.css" | minify  | resources.Fingerprint "md5"}}
 <link rel="stylesheet" href="{{ $pagedjsStyle.Permalink }}" integrity="{{ $pagedjsStyle.Data.Integrity }}">
 
-{{ $print := resources.Get "css/pagedjs/print.css" | resources.PostCSS (dict "config" "./assets/css/postcss.config.js" "noMap" true) | minify  | resources.Fingerprint "md5"}}
+{{ $print := resources.Get "css/pagedjs/print.css" | minify  | resources.Fingerprint "md5"}}
 <link rel="stylesheet" href="{{ $print.Permalink }}" integrity="{{ $print.Data.Integrity }}">
 
-{{ $interface := resources.Get "css/pagedjs/interface.css" | resources.PostCSS (dict "config" "./assets/css/postcss.config.js" "noMap" true) | minify  | resources.Fingerprint "md5"}}
+{{ $interface := resources.Get "css/pagedjs/interface.css" | minify  | resources.Fingerprint "md5"}}
 <link rel="stylesheet" href="{{ $interface.Permalink }}" integrity="{{ $interface.Data.Integrity }}">
 
 <!-- {{/*  set up paged.js polyfill to preview the print version  */}} -->
