--- a/themes/bookish/assets/css/pagedjs/print.css
+++ b/themes/bookish/assets/css/pagedjs/print.css
@@ -186,8 +186,9 @@
   size: A4;
 }
 
-section {
-  break-before : page;
+section, header {
+  break-after : page;
+  page-break-after: always;
 }
 
 h2 {
