--- a/themes/bookish/layouts/_default/list.html
+++ b/themes/bookish/layouts/_default/list.html
@@ -10,7 +10,7 @@
                     {{ if .Params.author }}Written by <span class="author"> {{ .Params.author }}</span>, {{ end }}
                     {{ if and .Params.author .Date }}  {{ end }}
                     {{ if .Params.date }} <span class="date"> {{ dateFormat "2 january 2006" .Date }} </span> {{ end }}
-                <span class="intro"> {{ .Params.intro }} </span>
+                <span class="intro"> {{ .Params.intro | markdownify}} </span>
                 {{end}}
                 </a>
             </li>
