--- a/themes/bookish/assets/css/pagedjs/print.css
+++ b/themes/bookish/assets/css/pagedjs/print.css
@@ -16,17 +16,18 @@
   margin-right: 15mm;
   margin-bottom: 25mm;
 
-  @top-right  {
+  @bottom-right  {
     content: counter(page);
     font-family: var(--font-sans);
     font-size: 0.7em;
     width: 5ch;
   }
 
-  @top-left  {
+  @bottom-left  {
     content: string(title);
     font-family: var(--font-sans);
     font-size: 0.7em;
+    width: 80mm;
   }
 }
 
@@ -36,32 +37,34 @@
   margin-right: 20mm;
   margin-bottom: 25mm;
 
-  @top-left  {
+  @bottom-left  {
     content: counter(page);
     font-family: var(--font-sans);
     font-size: 0.7em;
     width: 5ch;
   }
 
-  @top-right  {
+  @bottom-right  {
     content: string(title);
     font-family: var(--font-sans);
     font-size: 0.7em;
+    width: 80mm;
   }
 }
 
 @page :first {
+  margin-top: 40mm;
   background: var(--color-lightest-grey);
 
-  @bottom-left  {
+  @top-right  {
     content: element(logo);
   }
 
-  @top-left  {
+  @bottom-left {
+
     content: none;
   }
-
-  @top-right  {
+  @bottom-right  {
     content: none;
   }
 }
@@ -186,7 +189,7 @@
   size: A4;
 }
 
-section, header {
+section {
   break-after : page;
   page-break-after: always;
 }
