--- a/themes/bookish/layouts/_default/list.html
+++ b/themes/bookish/layouts/_default/list.html
@@ -9,7 +9,7 @@
                 <div class="meta">
                     {{ if .Params.author }}Written by <span class="author"> {{ .Params.author }}</span>, {{ end }}
                     {{ if and .Params.author .Date }}  {{ end }}
-                    {{ if .Params.date }} <span class="date"> {{ dateFormat "2 january 2006" .Date }} </span> {{ end }}
+                    {{ if .Params.date }} <span class="date"> {{ dateFormat "2 January 2006" .Params.Date | lower }} </span> {{ end }}
                 <span class="intro"> {{ .Params.intro | markdownify}} </span>
                 {{end}}
                 </a>
