add search to pagedjs website

--- a/themes/bookish/assets/css/base/type.css
+++ b/themes/bookish/assets/css/base/type.css
@@ -61,13 +61,14 @@ article {
     border: 0;
     line-height: 1;
     color: var(--color-body);
-    background: linear-gradient(transparent 0, transparent 78%, var(--color-link) 78%, var(--color-link) 82%, transparent 82%, transparent 100%);
+    background-color: linear-gradient(transparent 0, transparent 78%, var(--color-link) 78%, var(--color-link) 82%, transparent 82%, transparent 100%);
+    
     font-style: italic;
-    transition: background-color .5s;
+    transition: background .5s;
 
     &:hover {
-      --color-link: var(--color-accent);
-      color: var(--color-accent);
+      --color-link: var(--color-lightest-grey);
+      background-color: linear-gradient(transparent 0, transparent 0%, var(--color-link) 0%, var(--color-link) 82%, transparent 82%, transparent 100%);
     }
   }
 
