--- a/themes/bookish/assets/css/main.css
+++ b/themes/bookish/assets/css/main.css
@@ -2,6 +2,7 @@
 @import "themes/bookish/assets/css/base/variables.css";
 @import "themes/bookish/assets/css/base/fonts.css";
 @import "themes/bookish/assets/css/base/type.css";
+@import "themes/bookish/assets/css/base/form.css";
 @import "themes/bookish/assets/css/base/menu.css";
 @import "themes/bookish/assets/css/base/images.css";
 @import "themes/bookish/assets/css/base/footer.css";
