first installment for the comment using discourse

--- a/themes/bookish/assets/css/base/type.css
+++ b/themes/bookish/assets/css/base/type.css
@@ -431,3 +431,8 @@ header {
 .downloads table {
   grid-column: main/main;
 }
+
+#discourse-comments {
+  margin-top: 5em;
+  grid-column: main/main;
+}
