--- a/themes/bookish/layouts/partials/comments.html
+++ b/themes/bookish/layouts/partials/comments.html
@@ -1,4 +1,5 @@
-<div id='discourse-comments'>
+<div style="display: none;" id='discourse-comments'>
+    {{.Permalink}}
 </div>
 
 <script type="text/javascript">
