--- a/themes/bookish/layouts/partials/comments.html
+++ b/themes/bookish/layouts/partials/comments.html
@@ -1,6 +1,4 @@
-<div style="display: none;" id='discourse-comments'>
-    {{.Permalink}}
-</div>
+<div id='discourse-comments'></div>
 
 <script type="text/javascript">
   DiscourseEmbed = { discourseUrl: 'https://discourse.cabbagetreelabs.org/', discourseEmbedUrl: '{{ .Permalink }}' };
