--- a/themes/bookish/layouts/partials/comments.html
+++ b/themes/bookish/layouts/partials/comments.html
@@ -1,7 +1,9 @@
-<div id='discourse-comments'></div>
+<div id='discourse-comments'>
+    {{ .Permalink }}
+</div>
 
 <script type="text/javascript">
-  DiscourseEmbed = { discourseUrl: 'https://discourse.cabbagetreelabs.org/', discourseEmbedUrl: '{{ .Permalink }}' };
+  DiscourseEmbed = { discourseUrl: 'https://discourse.cabbagetreelabs.org/', discourseEmbedUrl: '{{ .URL }}' };
 
   (function() {
     var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
