--- a/themes/bookish/layouts/partials/comments.html
+++ b/themes/bookish/layouts/partials/comments.html
@@ -1,13 +1,12 @@
 <div id='discourse-comments'>
-    {{ .Permalink }}
 </div>
 
 <script type="text/javascript">
-  DiscourseEmbed = { discourseUrl: 'https://discourse.cabbagetreelabs.org/', discourseEmbedUrl: '{{ .URL }}' };
-
-  (function() {
-    var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
-    d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
-  })();
-</script> 
+    DiscourseEmbed = { discourseUrl: 'https://discourse.cabbagetreelabs.org/', discourseEmbedUrl: {{ .Permalink }} };
+  
+    (function() {
+      var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+      d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+    })();
+  </script> 
