--- a/themes/bookish/assets/css/pagedjs/pagedjs.css
+++ b/themes/bookish/assets/css/pagedjs/pagedjs.css
@@ -49,14 +49,15 @@
 
 @media screen and (max-width: 1350px)  {
   #print {
-    writing-mode: vertical-rl;
-    /* text-orientation: upright; */
-    /* text-transform: uppercase; */
     top: 20vh;
+    /* display: block; */
+    /* writing-mode: vertical-lr; */
+    transform: rotate(90deg);
+    right: -3vw;
    
   }
   #print svg {
-  transform: rotate(90deg);
+  /* transform: rotate(90deg); */
 
   }
   #print:hover {
