--- a/themes/bookish/assets/css/base/type.css
+++ b/themes/bookish/assets/css/base/type.css
@@ -61,10 +61,10 @@ article {
     border: 0;
     line-height: 1;
     color: var(--color-body);
-    background-color: linear-gradient(transparent 0, transparent 78%, var(--color-link) 78%, var(--color-link) 82%, transparent 82%, transparent 100%);
+    background: linear-gradient(transparent 0, transparent 78%, var(--color-link) 78%, var(--color-link) 82%, transparent 82%, transparent 100%);
     
     font-style: italic;
-    transition: background .5s;
+    /* transition: background .5s; */
 
     &:hover {
       --color-link: var(--color-lightest-grey);
@@ -210,8 +210,6 @@ article {
     border: 1px solid lightgrey;
     white-space: pre-wrap;
     margin: 0;
-    /* background: hsl(0, 2%, 90%); */
-    /* overflow: auto; */
     & + pre {
     }
   }
@@ -220,9 +218,10 @@ article {
     font-size: .70em;
     font-family: var(--font-mono);
     line-height: 1.2em;
-    background: #eed;
+    /* background: #eee; */
     margin: 0 0.3ch;
     line-height: 1;
+    border-bottom: 4px solid #eee;
   }
 
   pre code {
@@ -367,20 +366,21 @@ header {
   margin-top: 6em;
   /* font-weight: 700; */
   &::before {
-    content: var(--symbol-content);
-    /* transform: rotate(45deg); */
-    /* border: 4px solid #eee; */
+    /* content: var(--symbol-content);
     z-index: -1;
-    /* width: 10em; */
-    /* height: 10em; */
     font-size: 20em;
     top: -0.5em;
     left: -0.3em;
-    color: var(--color-lightest-grey);
+    color: red;
     display: block;
-    position: absolute;
+    position: absolute; */
   }
-
+  .top-title {
+color: grey;
+    display: block;
+    font-size: 0.5em;
+    margin-top: -1em;
+  }
   #title {
     margin-top: 0;
     margin-bottom: 0;
@@ -392,9 +392,24 @@ header {
     margin-top: .3em;
     font-family: var(--font-serif);
     position: relative;
-    /* text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper); */
-    /* filter: drop-shadow(-2px 0px 0px var(--color-paper)) drop-shadow(0px 2px 0px var(--color-paper)) drop-shadow(-2px -2px 0px var(--color-paper)) drop-shadow(2px 2px 0px var(--color-paper)) ; */
+
     border: 0px solid transparent;
+    &::before {
+      content: var(--symbol-content);
+      /* transform: rotate(45deg); */
+      /* border: 4px solid #eee; */
+      z-index: -1;
+      /* width: 10em; */
+      /* height: 10em; */
+      opacity: 0.6;
+      font-size: 5em;
+      top: -0.44em;
+      left: -0.3em;
+      font-style: normal;
+      color: var(--color-grey);
+      display: block;
+      position: absolute;
+    }
   }
 
   .meta {
