--- a/themes/bookish/assets/css/base/type.css
+++ b/themes/bookish/assets/css/base/type.css
@@ -222,6 +222,12 @@ article {
     margin: 0 0.3ch;
     line-height: 1;
     border-bottom: 4px solid #eee;
+    font-weight: 600;
+  }
+
+  a code { 
+    font-style: normal; 
+    border-bottom: none;
   }
 
   pre code {
@@ -436,6 +442,7 @@ color: grey;
   h5,
   h6 {
     margin-left: 0;
+    
   }
 
   h2 {
